--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@payloadcms/admin-bar": "3.75.0",
+    "@payloadcms/db-postgres": "3.75.0",
     "@payloadcms/live-preview-react": "3.75.0",
     "@payloadcms/next": "3.75.0",
     "@payloadcms/plugin-form-builder": "3.75.0",
@@ -32,51 +33,51 @@
     "@payloadcms/plugin-seo": "3.75.0",
     "@payloadcms/richtext-lexical": "3.75.0",
     "@payloadcms/ui": "3.75.0",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "16.4.7",
-    "geist": "^1.3.0",
-    "graphql": "^16.8.2",
+    "cross-env": "^10.1.0",
+    "dotenv": "17.2.4",
+    "geist": "^1.7.0",
+    "graphql": "^16.12.0",
     "lucide-react": "0.563.0",
     "next": "16.1.6",
     "next-sitemap": "^4.2.3",
     "payload": "3.75.0",
-    "prism-react-renderer": "^2.3.1",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "prism-react-renderer": "^2.4.1",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-hook-form": "7.71.1",
-    "sharp": "0.34.2",
-    "tailwind-merge": "^3.4.0",
-    "@payloadcms/db-postgres": "3.75.0"
+    "sharp": "0.34.5",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@playwright/test": "1.56.1",
+    "@eslint/eslintrc": "^3.3.3",
+    "@playwright/test": "1.58.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
-    "@testing-library/react": "16.3.0",
-    "@types/escape-html": "^1.0.2",
-    "@types/node": "22.19.9",
-    "@types/react": "19.2.9",
+    "@testing-library/react": "16.3.2",
+    "@types/escape-html": "^1.0.4",
+    "@types/node": "25.2.1",
+    "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
-    "@vitejs/plugin-react": "4.5.2",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.16.0",
-    "eslint-config-next": "15.4.11",
+    "@vitejs/plugin-react": "5.1.3",
+    "autoprefixer": "^10.4.24",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "16.1.6",
     "jsdom": "28.0.0",
-    "playwright": "1.56.1",
-    "playwright-core": "1.56.1",
-    "postcss": "^8.4.38",
-    "prettier": "^3.4.2",
+    "playwright": "1.58.2",
+    "playwright-core": "1.58.2",
+    "postcss": "^8.5.6",
+    "prettier": "^3.8.1",
+    "sass": "^1.97.3",
     "tailwindcss": "^4.1.18",
     "tsx": "4.21.0",
     "tw-animate-css": "^1.4.0",
-    "typescript": "5.7.3",
+    "typescript": "5.9.3",
     "vite-tsconfig-paths": "6.0.5",
     "vitest": "4.0.18"
   },
