--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@payloadcms/db-postgres": "3.75.0",
     "@payloadcms/live-preview-react": "3.75.0",
     "@payloadcms/next": "3.75.0",
+    "@payloadcms/payload-cloud": "^3.75.0",
     "@payloadcms/plugin-form-builder": "3.75.0",
     "@payloadcms/plugin-nested-docs": "3.75.0",
     "@payloadcms/plugin-redirects": "3.75.0",
     "@payloadcms/plugin-search": "3.75.0",
     "@payloadcms/plugin-seo": "3.75.0",
     "@payloadcms/richtext-lexical": "3.75.0",
+    "@payloadcms/storage-s3": "^3.75.0",
     "@payloadcms/ui": "3.75.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.8",
@@ -83,8 +85,9 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "sharp",
+      "@parcel/watcher",
       "esbuild",
+      "sharp",
       "unrs-resolver"
     ]
   }
