--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "ii": "cross-env NODE_OPTIONS=--no-deprecation pnpm --ignore-workspace install",
-    "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
-    "lint:fix": "cross-env NODE_OPTIONS=--no-deprecation next lint --fix",
+    "lint": "cross-env NODE_OPTIONS=--no-deprecation eslint .",
+    "lint:fix": "cross-env NODE_OPTIONS=--no-deprecation eslint . --fix",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "reinstall": "cross-env NODE_OPTIONS=--no-deprecation rm -rf node_modules && rm pnpm-lock.yaml && pnpm --ignore-workspace install",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
@@ -68,13 +68,16 @@
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.3",
     "autoprefixer": "^10.4.24",
-    "eslint": "^10.0.0",
+    "eslint": "^9.39.2",
     "eslint-config-next": "16.1.6",
+    "eslint-config-prettier": "^10.1.8",
     "jsdom": "28.0.0",
     "playwright": "1.58.2",
     "playwright-core": "1.58.2",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
+    "prettier-plugin-sql-cst": "^0.18.0",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "sass": "^1.97.3",
     "tailwindcss": "^4.1.18",
     "tsx": "4.21.0",
